# RASM

./: Cargo.toml  Makefile  README.md
examples/: EXAMPLES_SUMMARY.md  README.md  build_all.sh
examples/calculator/: .rasm.toml  calculator  main.s  math.s
examples/fibonacci/: .rasm.toml  fib.s  fibonacci
examples/hello/: .rasm.toml  hello  main.s  utils.s
examples/multi-module/: .rasm.toml  io.s  main.s  multi-module  string_utils.s
examples/syscalls/: .rasm.toml  demo.s  syscalls
src/: assembler.rs  cli.rs  config.rs  linker.rs  main.rs
