[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
owo-colors = "4.1"
indicatif = "0.17"
rayon = "1.10"
notify = "7.0"
notify-debouncer-full = "0.5"
atty = "0.2"

